--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,5 +4,5 @@ stages:
 test_job:
   stage: test
   script:
-    - echo "CI/CD работает hello iiijjjjfjhi!"
+    - echo "CI/CD работает hello iiijjjjfjjjjjjhi!"
 
